# bramm-data-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
data/: Mines_2024.xlsx  RMQS.csv
notebooks/: data_analysis.ipynb  gstools.ipynb  krigeage.ipynb  kriging.ipynb  matching.ipynb  moss_data.ipynb  multivariate.ipynb  multivariate_kriging.ipynb  rmqs.ipynb  rmqs_and_data.ipynb  rmqs_moss_kriging.ipynb  sandbox.ipynb  spatial_division.ipynb
src/bramm_data_analysis/: __init__.py  loading.py  matching.py
src/bramm_data_analysis/comparison/: __init__.py  correlation.py
src/bramm_data_analysis/core/: __init__.py
src/bramm_data_analysis/loaders/: __init__.py  _base.py  core.py  moss.py  pandas.py  rmqs.py
src/bramm_data_analysis/loaders/df_to_db/: __init__.py  converters.py
src/bramm_data_analysis/loaders/preprocessing/: __init__.py  _base.py  duplicates.py  moss.py  rmqs.py  scaler.py
src/bramm_data_analysis/loaders/preprocessing/outliers/: outliers_removal.py  thresholds.py
src/bramm_data_analysis/loaders/reading/: __init__.py  _base.py  excel_utils.py  moss.py  rmqs.py
src/bramm_data_analysis/loading/: __init__.py  converters.py  readers.py
src/bramm_data_analysis/loading/loaders/: __init__.py  _base.py  core.py  moss.py  rmqs.py
src/bramm_data_analysis/loading/preprocessing/: _base.py  moss.py  rmqs.py
src/bramm_data_analysis/preprocessing/: __init__.py  moss.py  rmqs.py
src/bramm_data_analysis/preprocessing/outliers/: __init__.py  outliers_removal.py
src/bramm_data_analysis/spatial/: __init__.py  boundary.py  grid.py
